# Django_tree_menu

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  init-script.sh  pyproject.toml
src/menu/: admin.py  apps.py  models.py  tests.py  urls.py  urls_main_menu.py  urls_secondary_menu.py  utils.py  views.py
src/menu/migrations/: 0001_initial.py
src/menu/static/menu/css/: menuitem_active.css
src/menu/templates/menu/: base.html  menu_item.html  menu_template.html
src/menu/templatetags/: menu_extras.py  menu_tags.py
src/tree_menu/: settings.py  urls.py
tools/: db_initialization.sql
tools/db_schema/: db_insert_test_data.sql  source.txt
