[tool.poetry]
name = "django_tree_menu"
version = "0.1.0"
description = ""
license = "Proprietary"
authors = ["Ekaterina <katerina.rubelle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
psycopg2-binary = "^2.9.9"
django-debug-toolbar = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
